@@ -28,6 +28,17 @@
 
 #include <QSharedData>
 
+QWebHistoryItem::QWebHistoryItem(const QWebHistoryItem &other)
+    : d(other.d)
+{
+}
+
+QWebHistoryItem &QWebHistoryItem::operator=(const QWebHistoryItem &other)
+{
+    d = other.d;
+    return *this;
+}
+
 QWebHistoryItem::~QWebHistoryItem()
 {
 }
